src/main/java/com/example/demo/error/WalletNotFoundAdvice.java
package com.example.demo.error;


import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.ResponseBody;
import org.springframework.web.bind.annotation.ResponseStatus;

@ControllerAdvice
class WalletNotFoundAdvice {

  @ResponseBody
  @ExceptionHandler(WalletNotFoundException.class)
  @ResponseStatus(HttpStatus.NOT_FOUND)
  String employeeNotFoundHandler(WalletNotFoundException ex) {
    return ex.getMessage();
  }
}